--- a/walk/package.json
+++ b/walk/package.json
@@ -5,12 +5,14 @@
    "devDependencies": {
       "@types/express": "^4.17.2",
       "@types/node": "^8.0.29",
-      "ts-node": "3.3.0",
+      "ts-node": "^3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
       "mysql": "^2.14.1",
       "nodemon": "^2.0.2",
+      "passport": "^0.4.1",
+      "passport-jwt": "^4.0.0",
       "pg": "^7.17.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.22"
